overflow fixed

--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -23,3 +23,12 @@
 		opacity: 0;
 	}
 }
+
+@keyframes progress {
+	0% {
+		transform: scaleX(0);
+	}
+	100% {
+		transform: scaleX(100%);
+	}
+}
